Doc/force-app/main/default/objects/Success_Plan__c/fields/Intended_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Intended_Use_Cases__c</fullName>
    <label>Intended Use Cases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative/Operation Request</fullName>
            </value>
            <value>
                <fullName>Application-Specific Workflow</fullName>
            </value>
            <value>
                <fullName>DMS/Workspace Management</fullName>
            </value>
            <value>
                <fullName>Document Service Center/Routing</fullName>
            </value>
            <value>
                <fullName>Email/Fax</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>IP Practice Automation</fullName>
            </value>
            <value>
                <fullName>IT/Staff Requests</fullName>
            </value>
            <value>
                <fullName>Knowledge Management</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Business Development</fullName>
            </value>
            <value>
                <fullName>Matter Management</fullName>
            </value>
            <value>
                <fullName>Professional Compliance</fullName>
            </value>
            <value>
                <fullName>Records Management</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Vendor Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>