Doc/force-app/main/default/objects/Success_Plan__c/fields/Paying_for_Flow__c.field-meta.xml
<CustomField>
    <fullName>Paying_for_Flow__c</fullName>
    <inlineHelpText>Does the customer actually pay for flow (according to their contract)?</inlineHelpText>
    <label>Paying for Flow?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>