Doc/force-app/main/default/objects/Success_Plan__c/fields/Succes_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Succes_Plan_Status__c</fullName>
    <label>Success Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>